# ChangeLog for gnome-base/gnome
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.101 2004/03/31 23:07:55 foser Exp $

*gnome-2.6_rc5 (01 Apr 2004)

  01 Apr 2004; foser <foser@gentoo.org> gnome-2.5_rc5.ebuild :
  New rc, this is really gnome 2.6 final

*gnome-2.6_rc4 (30 Mar 2004)

  30 Mar 2004; Travis Tilley <lv@gentoo.org> gnome-2.6_rc4.ebuild:
  added ~amd64 keyword

*gnome-2.6_rc3 (23 Mar 2004)

  23 Mar 2004; L. Boshell <leonardop@gentoo.org> gnome-2.6_rc3.ebuild:
  Including accessibility packages.

*gnome-2.6_rc2 (22 Mar 2004)

  22 Mar 2004; foser <foser@gentoo.org> gnome-2.6_rc2.ebuild :
  Updated meta to boost testing, now contains most of gstreamer

*gnome-2.6_rc1 (21 Mar 2004)

  21 Mar 2004; foser <foser@gentoo.org> gnome-2.6_rc1.ebuild :
  Initial gnome 2.6 meta ebuild
  Misses gstreamer & accessibility

  09 Mar 2004; <agriffis@gentoo.org> gnome-2.4.2.ebuild:
  stable on alpha and ia64

*gnome-2.4.2_p1 (14 Feb 2004)

  14 Feb 2004; Alastair Tse <liquidx@gentoo.org> gnome-2.4.2_p1.ebuild:
  revision bump

  10 Feb 2004; Gustavo Zacarias <gustavoz@gentoo.org> gnome-2.4.2.ebuild:
  stable on hppa and sparc

  10 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org> gnome-2.4.2.ebuild:
  set ppc in keywords

  07 Feb 2004; foser <foser@gentoo.org> gnome-2.4.2-r1.ebuild :
  Fix gnome-vfs dep to 2.4.2-r1 to fix a mistake

  06 Feb 2004; <spider@gentoo.org> gnome-2.4.2.ebuild:
  move intltool, pkg-config, gtk-doc to DEPEND instead of RDEPEND. kills off the
  last RDEPEND=intltool in my install

  06 Feb 2004; <spider@gentoo.org> gnome-2.4.2.ebuild:
  updated scrollkeeper to 0.3.14, intltool to 0.30
  remove outdated warning about KEYWORDS

*gnome-2.4.2 (05 Feb 2004)

  05 Feb 2004; foser <foser@gentoo.org> gnome-2.4.2.ebuild :
  New release

  29 Jan 2004; Aron Griffis <agriffis@gentoo.org> gnome-2.4.1.ebuild:
  stable on alpha and ia64
