@@ -1,22 +1,14 @@
-MD5 e9adb47e623cdde77e4390d7a61893a2 gnome-2.2.2-r1.ebuild 3468
 MD5 03a21e3a986de2a00b43749c13f36176 gnome-2.4.2_p1.ebuild 3730
 MD5 00dfa4540719c7e8e7e8c3c2a1dbe9f9 gnome-2.4.ebuild 3409
 MD5 807e4bcde5aebe29bd1bc19a5bca54c3 gnome-2.4.1.ebuild 3593
 MD5 a18280cd5025dbb36ebbadc02a4941e9 gnome-2.6.ebuild 3771
 MD5 390bbaf2bb2e535cb4c78ec95348d735 gnome-1.4-r3.ebuild 548
-MD5 f9d0cd9a8125699273675a88fc58f2f5 gnome-2.0.2-r1.ebuild 2509
-MD5 f120c3ed28a75206d785ac8297b751d6 gnome-2.2-r2.ebuild 3251
-MD5 0b3e9ae06d7cbad8d57840a083170ca5 gnome-2.2.1.ebuild 3224
-MD5 ebbed88b4b4c18cb545f8c7a9b59af4d ChangeLog 15252
+MD5 0af68eb35a6c4e26a2207918f5c8b1f6 ChangeLog 15376
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 b42ff519b0b6d8dd1ba5feb8dbb7dfe3 gnome-2.4.2.ebuild 3745
-MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.2.1 0
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.4.1 0
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.4.2 0
-MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.0.2-r1 0
-MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.2.2-r1 0
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.4 0
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.6 0
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-1.4-r3 0
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.4.2_p1 0
-MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-gnome-2.2-r2 0
