@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/gnome
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.101 2004/03/31 23:07:55 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.102 2004/04/05 15:26:20 foser Exp $
+
+*gnome-2.6 (05 Apr 2004)
+
+  05 Apr 2004; foser <foser@gentoo.org> gnome-2.6.ebuild :
+  Add changelog entry for 2.6 release
 
 *gnome-2.6_rc5 (01 Apr 2004)
 
